// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterContext should apply a helper with setRouteProduct and return a product configuration match, attempt closest disabled but return exact because of variant selection 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialToolbarFilters",
  ],
  "isClosest": false,
  "productGroup": "rhel",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a helper with setRouteProduct and return a product configuration match, closest 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": true,
  "productGroup": "rhel",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a helper with setRouteProduct and return a product configuration match, closest disabled 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": true,
  "productGroup": "rhel",
  "productPath": "l",
}
`;

exports[`RouterContext should apply a helper with setRouteProduct and return a product configuration match, exact 1`] = `
{
  "detailProps": [
    "allConfigs",
    "availableVariants",
    "firstMatch",
    "isClosest",
    "productGroup",
    "productConfig",
    "productPath",
    "productVariant",
    "disableIsClosestMatch",
  ],
  "firstMatch": [
    "aliases",
    "productGroup",
    "productId",
    "productLabel",
    "productPath",
    "productDisplay",
    "viewId",
    "productVariants",
    "query",
    "graphTallyQuery",
    "inventoryGuestsQuery",
    "inventoryHostsQuery",
    "inventorySubscriptionsQuery",
    "initialGraphFilters",
    "initialGraphSettings",
    "initialGuestsFilters",
    "initialInventoryFilters",
    "initialInventorySettings",
    "initialSubscriptionsInventoryFilters",
    "initialToolbarFilters",
  ],
  "isClosest": false,
  "productGroup": "rhel",
  "productPath": "rhel",
}
`;

exports[`RouterContext should apply a hook for the helper setRouteProduct with useSetRouteProduct: hook 1`] = `
[
  [
    {
      "disableIsClosestMatch": false,
      "productPath": "rhel",
      "productVariant": {},
    },
  ],
]
`;

exports[`RouterContext should apply a hook for useNavigate: navigation push 1`] = `
[
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
  [
    {},
    "",
    "/subscriptions/rhel?lorem=ipsum",
    undefined,
  ],
]
`;

exports[`RouterContext should apply a hook for useRouteDetail: document title 1`] = `
[
  [
    "t(curiosity-view.title, {"appName":"Subscriptions","context":"rhel"}) - Subscriptions",
    true,
  ],
]
`;

exports[`RouterContext should return specific properties: specific properties 1`] = `
{
  "setRouteProduct": [Function],
  "useNavigate": [Function],
  "useRouteDetail": [Function],
  "useSetRouteProduct": [Function],
}
`;
